--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
     "mdsvex": "^0.11.2",
+    "midtrans-client": "^1.4.2",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.5",
